tui/tests/snapshots/notebook_views__editor_breadcrumb_nested.snap
---
source: tui/tests/notebook_views.rs
assertion_line: 123
expression: text
snapshot_kind: text
---
 Note 'Sample NoteSecond' normal mode                                                                  [?] Show keymap 
[Browser]                                   ▐ 󱇗 Sample NoteSecond                                                       
 󰝰 Notes                                    ▐ 1 XHted                                                                   
   󰉋 Dir                                    ▐ 2 jl :D                                                                   
   󱇗 Sample NoteSecond                      ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐ NORMAL   󰝰 Notes  󰝰 Dir  󱇗 Nested 
