tui/tests/snapshots/notebook_views__editor_tab_tree.snap
---
source: tui/tests/notebook_views.rs
assertion_line: 92
expression: text
snapshot_kind: text
---
 Note 'Sample NoteSecond' selected                                                                     [?] Show keymap 
[Browser]                                   ▐ 󱇗 Sample NoteSecond  󱇗 Other                                              
 󰝰 Notes                                    ▐ 1 XHi :D                                                                  
   󱇗 Sample NoteSecond                      ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐          󰝰 Notes  󱇗 Sample NoteSecond 
